Closed Bug 821914 Opened 11 years ago Closed 11 years ago

Unable to post or save a draft to Newsgroups

Categories

(MailNews Core :: Networking: NNTP, defect)

defect
Not set
major

Tracking

(Not tracked)

VERIFIED FIXED
Thunderbird 20.0

People

(Reporter: JoeS1, Assigned: mnyromyr)

References

Details

Attachments

(1 file, 1 obsolete file)

Steps:
Attempt to post to news.mozilla.org

Error popup
Please verify that your mail and newsgroup setting are correct.

Error console:
    Timestamp: 12/14/2012 6:05:52 PM
    Error: GenericSendMessage FAILED: [Exception... "Component returned failure code: 0x80004005 (NS_ERROR_FAILURE) [nsIMsgCompose.SendMsg]"  nsresult: "0x80004005 (NS_ERROR_FAILURE)"  location: "JS frame :: chrome://messenger/content/messengercompose/MsgComposeCommands.js :: GenericSendMessage :: line 2909"  data: no]
    Source File: chrome://messenger/content/messengercompose/MsgComposeCommands.js
    Line: 2912

This is with Daily as of the 13th
Another error from a Mozillazine reporter:
    Timestamp: 12/14/2012 11:28:03 AM
    Error: [Exception... "'TypeError: (intermediate value).Count is not a function' when calling method: [nsIRunnable::run]"  nsresult: "0x8057001c (NS_ERROR_XPC_JS_THREW_JS_OBJECT)"  location: "native frame :: <unknown filename> :: <TOP_LEVEL> :: line 0"  data: no]
I think the Platform should be all since I am a Linux user.

Mozilla/5.0 (X11; Linux i686 on x86_64; rv:20.0) Gecko/20100101 Thunderbird/20.0a1

BuildID: 20121214030351
OS: Windows 7 → All
I saw also a report in a German newsgroup there SM is also affected (but no error showing in console).
Any NNTP logs?
Flags: needinfo?(jsabash)
(In reply to Joshua Cranmer [:jcranmer] from comment #5)
> Any NNTP logs?

No, but my feeling here is that we never get to the transition from composition to the actual nntp protocol. It's very similar to if you select the wrong identity and try to post. I can get logs if you really need them.
Flags: needinfo?(jsabash)
Attached file nntplog (obsolete) —
We never attempt to actually send via nntp
So..if you key in the exact newsgroup url:
news://mozilla.org:119/mozilla.test
The message posts just fine.
Regression from bug 820377 ?
Attached patch fix v0Splinter Review
This was broken in 2007 by bug 379070 — the funny question is which devious workaround it was hidden by for all these years … :-/
Assignee: nobody → mnyromyr
Attachment #692658 - Attachment is obsolete: true
Status: NEW → ASSIGNED
Attachment #693990 - Flags: review?(irving)
Component: Message Compose Window → Networking: NNTP
Product: Thunderbird → MailNews Core
Hardware: x86_64 → All
Comment on attachment 693990 [details] [diff] [review]
fix v0

Review of attachment 693990 [details] [diff] [review]:
-----------------------------------------------------------------

I agree that it would be interesting to know what change uncovered this broken code; that said, it looks right and does the right thing when I test it.
Attachment #693990 - Flags: review?(irving) → review+
(In reply to Karsten Düsterloh from comment #10)
> Created attachment 693990 [details] [diff] [review]
> fix v0

That solves the problem for my SM 2.17a1 on Linux x86_64
https://hg.mozilla.org/comm-central/rev/95509c6b8032
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
verified fixed with tinderbox build
http://hg.mozilla.org/mozilla-central/rev/72ed04aaae1a

Thanks Karsten
Status: RESOLVED → VERIFIED
(In reply to Karsten Düsterloh from comment #10)
> Created attachment 693990 [details] [diff] [review]
> fix v0

In general it does works quite well.

But I still get the message when an autosave event occurs while I edit the newsgroup header (e.g. a second one).

If the Group is spelled correctly all works fine again.

New Bug?
Target Milestone: --- → Thunderbird 20.0
(In reply to Alfred Peters from comment #15)

> But I still get the message when an autosave event occurs while I edit the
> newsgroup header (e.g. a second one).
> 
> If the Group is spelled correctly all works fine again.
> 
> New Bug?

Yes, new bug please.
Blocks: 832760
(In reply to Irving Reid (:irving) from comment #16)
> (In reply to Alfred Peters from comment #15)

> > New Bug?
> 
> Yes, new bug please.

Done: Bug 832760
You need to log in before you can comment on or make changes to this bug.