Bug 821914 - Unable to post or save a draft to Newsgroups; r=irving